# proc_nousuji_result_csv

./: README.md  main.py  marimotest.py  normalize_songs.py  proc_music_ranking.py  pyproject.toml  song_name_list.txt
__marimo__/session/: marimotest.py.json
input/: song_list.json  song_name_list.txt
output/: result_summary_processed.csv.bak.1767683918
src/: normalize_options.py  normalize_songs.py  proc_GM_ranking.py  proc_music_ranking.py
